<resources>
    <string name="app_name">FRC Scouting Application</string>
    <string name="version_number">0.1.0</string>

    <!-- Menu -->
    <string name="menu_teams">Teams</string>
    <string name="menu_events">Events</string>
    <string name="menu_share">Share over Bluetooth</string>
    <string name="menu_export">Export to File</string>
    <string name="menu_sync">Sync to Server</string>
    <string name="menu_templates">Templates</string>
    <string name="menu_settings">Settings</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>

    <!-- List Items -->
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>

    <!-- Login -->
    <string name="standalone">Standalone</string>
    <string name="with_a_team">With a Team</string>
    <string name="custom_setup">Custom Setup</string>

    <!-- Events -->
    <string name="event_name">Event Name</string>
    <string name="event_type">Event</string>
    <string name="week">Week</string>
    <string name="teams_at_event">Teams at Event:</string>
    <string name="open_blue_alliance">Open Blue Alliance</string>
    <string name="select_event">Select Event</string>

    <!-- Teams -->
    <string name="menu_team">Team</string>
    <string name="menu_pit">Pit Scout</string>
    <string name="menu_match">Match Scout</string>
    <string name="menu_notes">Notes</string>

    <!-- Team Details -->
    <string name="team_location">From</string>
    <string name="team_aka">aka</string>
    <string name="team_rookie_year">Rookie Year:</string>

    <!-- Notes -->
    <string name="note_by">Note by</string>

    <!-- Titles -->
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="website">Website</string>

    <!-- Sync -->
    <string name="sync_now">Sync Now</string>
    <string name="syncing">Syncing</string>
    <string name="last_sync">Last Sync: %s</string>
    <string name="never_synced">Never Synced</string>

    <!-- Settings -->
    <string name="user_interface">User Interface</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>

    <string name="night_mode">Night Mode</string>
    <string-array name="night_mode_options">
        <item>Auto</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="night_mode_values">
        <item>auto</item>
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string name="prevent_template_editing">Prevent Template Editing</string>
    <string name="prevent_template_editing_desc">
        Choose whether or not the template editor will be shown.
        Useful to prevent accidental edits from non-lead team members.
    </string>

    <string name="sync_frequency">Sync Frequency</string>
    <string name="sync_frequency_desc">
        %s\n\nFrequency the application will sync the data to the
        server when connected to the internet.
    </string>
    <string-array name="sync_frequency_options">
        <item>Every 10 mins</item>
        <item>Every 30 mins</item>
        <item>Every hour</item>
        <item>Manual</item>
    </string-array>
    <string-array name="sync_frequency_values">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>0</item>
    </string-array>

    <string name="login_option">Change Login Option</string>
    <string name="login_option_desc">
        Changing this option will reset all of your data.
    </string>

    <string name="release_notes">Release Notes</string>
    <string name="release_notes_desc">View the latest release notes</string>

    <string name="version">Version</string>
    <string name="auto">Auto</string>

    <string name="clear_all_data">Reset Database</string>
    <string name="clear_all_data_desc">Clears and remakes local database.</string>

    <!-- Form -->
    <string name="section_header">Section Header</string>
    <string name="label">Label</string>
    <string name="other">Other:</string>
    <string name="option">Option</string>
    <string name="template_not_found">Template Not Found!</string>
    <string name="go_back">Go Back</string>
    <string name="submit">Submit</string>
    <string name="unable_to_save">Unable to save. Team/Event Missing</string>
    <string name="successful_delete">Successfully Deleted Scout!</string>
    <string name="failed_to_open_scout">Failed to open Scout!</string>

    <!-- Counter -->
    <string name="counter_subtract">Counter Decrement</string>
    <string name="counter_add">Counter Increment</string>
    <string name="counter_label">Counter</string>
    <string name="counter_value">0</string>

    <!-- Unsorted -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_team_detail">TeamDetailActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>