<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_teams"
            android:title="@string/menu_teams" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_export"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/nav_sync"
            android:title="@string/menu_sync" />
        <item
            android:id="@+id/nav_templates"
            android:title="@string/menu_templates" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>